tests/ui/expressions/field-access-expressions/field-selector-structs-unions-2.stderr
error[E0609]: no field `1` on type `MyUnion`
  --> $DIR/field-selector-structs-unions-2.rs:18:22
   |
LL |     let _ = my_union.1;
   |                      ^ unknown field
   |
help: a field with a similar name exists
   |
LL |     let _ = my_union.x;
   |                      ~

error[E0609]: no field `0` on type `Point`
  --> $DIR/field-selector-structs-unions-2.rs:20:23
   |
LL |     let _ = my_struct.0; 
   |                       ^ unknown field
   |
help: a field with a similar name exists
   |
LL |     let _ = my_struct.x; 
   |                       ~

error[E0609]: no field `z` on type `MyUnion`
  --> $DIR/field-selector-structs-unions-2.rs:22:22
   |
LL |     let _ = my_union.z;
   |                      ^ unknown field
   |
help: a field with a similar name exists
   |
LL |     let _ = my_union.x;
   |                      ~

error[E0609]: no field `z` on type `Point`
  --> $DIR/field-selector-structs-unions-2.rs:24:23
   |
LL |     let _ = my_struct.z; 
   |                       ^ unknown field
   |
help: a field with a similar name exists
   |
LL |     let _ = my_struct.x; 
   |                       ~

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0609`.
